--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}WessInsight - CV Analysis{% endblock %}
+{% block title %}wessInsight - CV Analysis{% endblock %}
 
 {% block body %}
 <div class="bg-white">
     <!-- Hero section -->
     <div class="relative isolate px-6 pt-14 lg:px-8">
-        {# <div class="absolute inset-x-0 -top-40 z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
+        {# <div class="absolute inset-x-0 -top-40 z-10 transform-gpu overflow-hidden blur-3xl sm:-top-0" aria-hidden="true">
             <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-primary-light to-secondary-light opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"></div>
         </div> #}
         
