--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
                 <div class="flex justify-between h-16">
                     <div class="flex">
                         <div class="flex-shrink-0 flex items-center">
-                            <a href="{{ path('app_home') }}" class="text-2xl font-bold text-primary-light">WessInsight</a>
+                            <a href="{{ path('app_home') }}" class="text-2xl font-bold text-primary-light">wessInsight</a>
                         </div>
                         {# <div class="hidden md:ml-6 md:flex md:items-center md:space-x-4">
                             <a href="{{ path('app_dashboard') }}" class="px-3 py-2 text-sm font-medium text-gray-700 hover:text-primary-light">Dashboard</a>
